# hmc-power-orchestrator

./: .env.example  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  dev-requirements.txt  placeholders.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  ci.yml  release.yml  test-coverage.yml
examples/: demo.sh  example-policy.json  example-policy.yaml  policy.yaml  sample-policy.yaml
hmc_orchestrator/: __init__.py  actions.py  cli.py  config.py  hmc_api.py  http.py  inventory.py  log.py  metrics.py  policies.py  version.py
src/hmc_orchestrator/: cli.py  config.py  exceptions.py  hmc_api.py  logging.py  policy_engine.py  policy_schema.json  session.py
src/hmc_power_orchestrator/: __init__.py  api.py  cli.py  config.py  exceptions.py  hmc_client.py  http.py  models.py  observability.py  policy.py  utils.py
tests/: conftest.py  test_cli.py  test_cli_apply.py  test_cli_list.py  test_client.py  test_config.py  test_http.py  test_metrics_adapter.py  test_policies.py  test_policy.py  test_policy_engine.py  test_policy_path_traversal.py  test_session.py
