[project]
name = "hmc-power-orchestrator"
version = "0.1.0"
description = "Secure CLI to orchestrate CPU and memory for IBM Power LPARs"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Project Contributors", email = "contributors@example.com"}]
dependencies = [
    "requests>=2.31,<3",
    "typer>=0.9,<1",
    "rich>=13,<14",
    "pyyaml>=6,<7",
    "tabulate>=0.9,<1",
]
optional-dependencies.dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "responses>=0.25",
    "ruff>=0.5",
    "mypy>=1.8",
    "coverage>=7",
]

[project.scripts]
hmc-orchestrator = "hmc_power_orchestrator.cli:app"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = ["requests", "requests.*", "urllib3.*", "yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=hmc_power_orchestrator --cov-report=term-missing"
