[project]
name = "hmc-power-orchestrator"
version = "0.1.0"
description = "Secure CLI to orchestrate CPU and memory for IBM Power LPARs"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Project Contributors", email = "contributors@example.com"}]
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2,<3",
    "typer>=0.9,<1",
    "rich>=13,<14",
    "pyyaml>=6,<7",
    "structlog>=24,<25",
    "prometheus-client>=0.20,<1",
    "tenacity>=8,<9",
    "jsonschema>=4,<5",
    "python-dotenv>=1,<2",
]
optional-dependencies.dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "pytest-mock>=3",
    "respx>=0.20",
    "ruff>=0.5",
    "mypy>=1.8",
    "coverage>=7",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[project.scripts]
hmc-orchestrator = "hmc_orchestrator.cli:app"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = [
    "httpx",
    "yaml",
    "typer",
    "rich",
    "pydantic",
    "structlog",
    "prometheus_client",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = ""
